--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Andy Friedman <afriedman412@gmail.com>"]
 python = "^3.8"
 Flask = "^2.1.1"
 pandas = "^1.4.2"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 
